syntax = "proto3";

package providers;

// ===================================================
// SERVICE DEFINITION
// ===================================================
service ProvidersService {
  // Create a professional service listing (The Proactive Listing)
  rpc CreateServiceOffering (CreateServiceOfferingRequest) returns (BaseServiceOfferingResponse);
  
  // Discover listings by App Vertical (JOBS, HOUSING, SOCIAL_SUPPORT)
  rpc GetOfferingsByVertical (GetOfferingsByVerticalRequest) returns (ListServiceOfferingsResponse);
}

// ===================================================
// SHARED MESSAGES
// ===================================================
message ErrorPayload {
  string code = 1;
  string message = 2;
  string details = 3;
}

message DayAvailability {
  string day = 1;      // e.g. "Monday"
  string open = 2;     // e.g. "08:00"
  string close = 3;    // e.g. "17:00"
  bool isClosed = 4;   // e.g. false
}

// ===================================================
// ENTITIES
// ===================================================
message ServiceOffering {
  string id = 1;
  string externalId = 2;
  string providerId = 3; 
  
  string title = 4;
  string description = 5;
  string categoryLabel = 6; 
  repeated string verticals = 7; 
  
  double basePrice = 8;
  string priceUnit = 9; 
  
  string locationCity = 10;
  string locationNeighborhood = 11;
  
  // Structured Availability
  repeated DayAvailability availability = 12;
  
  int32 yearsExperience = 13; 
  bool isVerified = 14;
  string additionalNotes = 15;
  
  double averageRating = 16;
  int32 reviewCount = 17;
  
  string createdAt = 18;
  string updatedAt = 19;
}

// ===================================================
// REQUEST MESSAGES
// ===================================================
message CreateServiceOfferingRequest {
  string providerId = 1;
  string title = 2;
  string description = 3;
  
  string categoryLabel = 4; 
  repeated string verticals = 5; 
  
  double basePrice = 6;
  string priceUnit = 7;
  
  string locationCity = 8;
  string locationNeighborhood = 9;
  
  int32 yearsExperience = 10;
  string additionalNotes = 11;
  
  DayAvailability availability = 12;
}

message GetOfferingsByVerticalRequest {
  string vertical = 1; 
  string city = 2;     
}

// ===================================================
// RESPONSE MESSAGES
// ===================================================
message BaseServiceOfferingResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  ServiceOffering data = 4; 
  ErrorPayload error = 5;
}

message ListServiceOfferingsResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  repeated ServiceOffering data = 4;
  ErrorPayload error = 5;
}